--- a/index.html
+++ b/index.html
@@ -1,6 +1,77 @@
 <!DOCTYPE html>
 <html>
 <head>
+	<title>Matrix Digits</title>
+	<style>
+		body {
+			background-color: black;
+			overflow: hidden;
+			font-family: "Courier", monospace;
+		}
+
+		#digit-layer {
+			position: absolute;
+			top: 0;
+			left: 0;
+			width: 100%;
+			height: 100%;
+			pointer-events: none;
+		}
+
+		.digit {
+			position: absolute;
+			font-size: 20px;
+			color: green;
+			animation: digit-fall 10s linear infinite;
+		}
+
+		.digit-69 {
+			color: #00ffff;
+		}
+
+		.digit-420 {
+			color: #00ff00;
+		}
+
+		@keyframes digit-fall {
+			from {
+				transform: translateY(-100%);
+			}
+			to {
+				transform: translateY(100vh);
+			}
+		}
+	</style>
+</head>
+<body>
+	<div id="digit-layer"></div>
+	<h1 style="position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%); color: white; font-size: 50px;">MemeDigits.eth</h1>
+	<script>
+		var digitLayer = document.getElementById('digit-layer');
+		var windowWidth = window.innerWidth;
+		var digitCount = Math.floor(windowWidth / 20);
+		for (var i = 0; i < digitCount; i++) {
+			var digitElement = document.createElement('span');
+			digitElement.classList.add('digit');
+			if (Math.random() < 0.5) {
+				digitElement.innerText = '69';
+				digitElement.classList.add('digit-69');
+			} else {
+				digitElement.innerText = '420';
+				digitElement.classList.add('digit-420');
+			}
+			digitElement.style.left = (i * 20) + 'px';
+			digitElement.style.top = Math.floor(Math.random() * -200) + 'px';
+			digitElement.style.animationDelay = Math.floor(Math.random() * 10000) + 'ms';
+			digitLayer.appendChild(digitElement);
+		}
+	</script>
+</body>
+</html>
+
+<!DOCTYPE html>
+<html>
+<head>
 	<title>Static Black Background</title>
 	<style>
 		body {
@@ -40,7 +111,6 @@
 	</style>
 </head>
 <body>
-	<div class="center-text">MemeDigits.eth</div>
 	<div class="cursor"></div>
 	<script>
 		document.addEventListener('click', function(e) {
